fixing overlap - z-index issues

--- a/apps/genomicsdb/components/header.css
+++ b/apps/genomicsdb/components/header.css
@@ -28,7 +28,7 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 50;
+    z-index: 101;
 }
 .logo-container {
     display: flex;
